# provision-it

./: .gitattributes  README.md  notes.md  upload.sh
autoinstall/: .gitignore  upload.sh
autoinstall/legacy/ubuntu-bionic/: linux  preseed.cfg
autoinstall/legacy/ubuntu-focal/: initrd  preseed-meadow.cfg  preseed.cfg  user-data  vmlinuz
autoinstall/legacy/ubuntu-xenial/: linux  preseed.cfg  preseed.cfg-network-no-lvm.ini
autoinstall/scripts/: post-install-debian.sh
autoinstall/uefi/ubuntu-jammy/: initrd  user-data  user-data-no-lvm  vmlinuz
cdk8s/: .gitignore  .python-version  README.md  cdk8s.yaml  config.py  container_server.py  create_db.sh  main.py  package-lock.json  requirements.in  requirements.txt  restart_deployment.sh  setup.sh  update-deps.sh  update-dns.sh  upload.sh
provision/: .gitignore  Dockerfile  README.md  notes.md  pyproject.toml  requirements.in  requirements.txt  run.sh  setup.sh  update-deps.sh  upload.sh
provision/migrations/: README.md  env.py
provision/migrations/versions/: 45a83a328ad7_create_deployment_table.py  844f8db88172_add_next_menu_item_to_client.py  aad80a179d9b_create_client_table.py
provision/provision/: __init__.py  app.py  client.py  custom_menu.ipxe.j2  database.py  deployment.py  menu.ipxe.j2  settings.py  upload_results.py
salt/: upload.sh
salt/state/: top.sls
salt/state/grub-default/: init.sls
salt/state/grub-rt/: init.sls
salt/state/kernel-debug/: init.sls
salt/state/licorice/: init.sls
salt/state/shielding/: init.sls
salt/state/wait_for_reboot/: init.sls
(+1 files in other folders)
