[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "provision"
version = "0.0.1"
description = "LiCoRICE Netboot"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {email = "licorice@bil.stanford.edu"},
  {name = "Stanford Brain Interfacing Laboratory"}
]
classifiers = [
  "Programming Language :: Python :: 3"
]
requires-python = ">=3.7"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["provision"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.in"]}
